roaring_dart/lib/generated_bindings.dart


  late final _bitset_create_with_capacityPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<bitset_t> Function(ffi.Size)>>(
          'bitset_create_with_capacity');
  late final _bitset_create_with_capacity = _bitset_create_with_capacityPtr
      .asFunction<ffi.Pointer<bitset_t> Function(int)>();

  void bitset_free(
    ffi.Pointer<bitset_t> bitset,
  ) {
    return _bitset_free(
      bitset,
    );
  }

  late final _bitset_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<bitset_t>)>>(
          'bitset_free');
  late final _bitset_free =
      _bitset_freePtr.asFunction<void Function(ffi.Pointer<bitset_t>)>();

  void bitset_clear(
    ffi.Pointer<bitset_t> bitset,
  ) {
    return _bitset_clear(
      bitset,
    );
  }

  late final _bitset_clearPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<bitset_t>)>>(
          'bitset_clear');
  late final _bitset_clear =
      _bitset_clearPtr.asFunction<void Function(ffi.Pointer<bitset_t>)>();

  void bitset_fill(
    ffi.Pointer<bitset_t> bitset,
  ) {
    return _bitset_fill(
      bitset,
    );
  }

  late final _bitset_fillPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<bitset_t>)>>(
          'bitset_fill');
  late final _bitset_fill =
      _bitset_fillPtr.asFunction<void Function(ffi.Pointer<bitset_t>)>();

  ffi.Pointer<bitset_t> bitset_copy(
    ffi.Pointer<bitset_t> bitset,
  ) {
    return _bitset_copy(
      bitset,
    );
  }

  late final _bitset_copyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<bitset_t> Function(
              ffi.Pointer<bitset_t>)>>('bitset_copy');
  late final _bitset_copy = _bitset_copyPtr
      .asFunction<ffi.Pointer<bitset_t> Function(ffi.Pointer<bitset_t>)>();

  bool bitset_resize(
    ffi.Pointer<bitset_t> bitset,
    int newarraysize,
    bool padwithzeroes,
  ) {
    return _bitset_resize(
      bitset,
      newarraysize,
      padwithzeroes,
    );
  }

  late final _bitset_resizePtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(
              ffi.Pointer<bitset_t>, ffi.Size, ffi.Bool)>>('bitset_resize');
  late final _bitset_resize = _bitset_resizePtr
      .asFunction<bool Function(ffi.Pointer<bitset_t>, int, bool)>();

  int bitset_size_in_bytes(
    ffi.Pointer<bitset_t> bitset,
  ) {
    return _bitset_size_in_bytes(
      bitset,
    );
  }

  late final _bitset_size_in_bytesPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(ffi.Pointer<bitset_t>)>>(
          'bitset_size_in_bytes');
  late final _bitset_size_in_bytes = _bitset_size_in_bytesPtr
      .asFunction<int Function(ffi.Pointer<bitset_t>)>();

  int bitset_size_in_bits(
    ffi.Pointer<bitset_t> bitset,
  ) {
    return _bitset_size_in_bits(
      bitset,
    );
  }

  late final _bitset_size_in_bitsPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(ffi.Pointer<bitset_t>)>>(
          'bitset_size_in_bits');
  late final _bitset_size_in_bits =
      _bitset_size_in_bitsPtr.asFunction<int Function(ffi.Pointer<bitset_t>)>();

  int bitset_size_in_words(
    ffi.Pointer<bitset_t> bitset,
  ) {
    return _bitset_size_in_words(
      bitset,
    );
  }

  late final _bitset_size_in_wordsPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(ffi.Pointer<bitset_t>)>>(
          'bitset_size_in_words');
  late final _bitset_size_in_words = _bitset_size_in_wordsPtr
      .asFunction<int Function(ffi.Pointer<bitset_t>)>();

  bool bitset_grow(
    ffi.Pointer<bitset_t> bitset,
    int newarraysize,
  ) {
    return _bitset_grow(
      bitset,
      newarraysize,
    );
  }

  late final _bitset_growPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<bitset_t>, ffi.Size)>>('bitset_grow');
  late final _bitset_grow =
      _bitset_growPtr.asFunction<bool Function(ffi.Pointer<bitset_t>, int)>();

  bool bitset_trim(
    ffi.Pointer<bitset_t> bitset,
  ) {
    return _bitset_trim(
      bitset,
    );
  }

  late final _bitset_trimPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<bitset_t>)>>(
          'bitset_trim');
  late final _bitset_trim =
      _bitset_trimPtr.asFunction<bool Function(ffi.Pointer<bitset_t>)>();

  void bitset_shift_left(
    ffi.Pointer<bitset_t> bitset,
    int s,
  ) {
    return _bitset_shift_left(
      bitset,
      s,
    );
  }

  late final _bitset_shift_leftPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<bitset_t>, ffi.Size)>>('bitset_shift_left');
  late final _bitset_shift_left = _bitset_shift_leftPtr
      .asFunction<void Function(ffi.Pointer<bitset_t>, int)>();

  void bitset_shift_right(
    ffi.Pointer<bitset_t> bitset,
    int s,
  ) {
    return _bitset_shift_right(
      bitset,
      s,
    );
  }

  late final _bitset_shift_rightPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<bitset_t>, ffi.Size)>>('bitset_shift_right');
  late final _bitset_shift_right = _bitset_shift_rightPtr
      .asFunction<void Function(ffi.Pointer<bitset_t>, int)>();

  void bitset_set(
    ffi.Pointer<bitset_t> bitset,
    int i,
  ) {
    return _bitset_set(
      bitset,
      i,
    );
  }

  late final _bitset_setPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<bitset_t>, ffi.Size)>>('bitset_set');
  late final _bitset_set =
      _bitset_setPtr.asFunction<void Function(ffi.Pointer<bitset_t>, int)>();

  void bitset_set_to_value(
    ffi.Pointer<bitset_t> bitset,
    int i,
    bool flag,
  ) {
    return _bitset_set_to_value(
      bitset,
      i,
      flag,
    );
  }

  late final _bitset_set_to_valuePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<bitset_t>, ffi.Size,
              ffi.Bool)>>('bitset_set_to_value');
  late final _bitset_set_to_value = _bitset_set_to_valuePtr
      .asFunction<void Function(ffi.Pointer<bitset_t>, int, bool)>();

  bool bitset_get(
    ffi.Pointer<bitset_t> bitset,
    int i,
  ) {
    return _bitset_get(
      bitset,
      i,
    );
  }

  late final _bitset_getPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<bitset_t>, ffi.Size)>>('bitset_get');
  late final _bitset_get =
      _bitset_getPtr.asFunction<bool Function(ffi.Pointer<bitset_t>, int)>();

  int bitset_count(
    ffi.Pointer<bitset_t> bitset,
  ) {
    return _bitset_count(
      bitset,
    );
  }

  late final _bitset_countPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(ffi.Pointer<bitset_t>)>>(
          'bitset_count');
  late final _bitset_count =
      _bitset_countPtr.asFunction<int Function(ffi.Pointer<bitset_t>)>();

  int bitset_minimum(
    ffi.Pointer<bitset_t> bitset,
  ) {
    return _bitset_minimum(
      bitset,
    );
  }

  late final _bitset_minimumPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(ffi.Pointer<bitset_t>)>>(
          'bitset_minimum');
  late final _bitset_minimum =
      _bitset_minimumPtr.asFunction<int Function(ffi.Pointer<bitset_t>)>();

  int bitset_maximum(
    ffi.Pointer<bitset_t> bitset,
  ) {
    return _bitset_maximum(
      bitset,
    );
  }

  late final _bitset_maximumPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(ffi.Pointer<bitset_t>)>>(
          'bitset_maximum');
  late final _bitset_maximum =
      _bitset_maximumPtr.asFunction<int Function(ffi.Pointer<bitset_t>)>();

  bool bitset_inplace_union(
    ffi.Pointer<bitset_t> b1,
    ffi.Pointer<bitset_t> b2,
  ) {
    return _bitset_inplace_union(
      b1,
      b2,
    );
  }

  late final _bitset_inplace_unionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<bitset_t>,
              ffi.Pointer<bitset_t>)>>('bitset_inplace_union');
  late final _bitset_inplace_union = _bitset_inplace_unionPtr.asFunction<
      bool Function(ffi.Pointer<bitset_t>, ffi.Pointer<bitset_t>)>();

  int bitset_union_count(
    ffi.Pointer<bitset_t> b1,
    ffi.Pointer<bitset_t> b2,
  ) {
    return _bitset_union_count(
      b1,
      b2,
    );
  }

  late final _bitset_union_countPtr = _lookup<
      ffi.NativeFunction<
          ffi.Size Function(ffi.Pointer<bitset_t>,
              ffi.Pointer<bitset_t>)>>('bitset_union_count');
  late final _bitset_union_count = _bitset_union_countPtr
      .asFunction<int Function(ffi.Pointer<bitset_t>, ffi.Pointer<bitset_t>)>();

  void bitset_inplace_intersection(
    ffi.Pointer<bitset_t> b1,
    ffi.Pointer<bitset_t> b2,
  ) {
    return _bitset_inplace_intersection(
      b1,
      b2,
    );
  }

  late final _bitset_inplace_intersectionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<bitset_t>,
              ffi.Pointer<bitset_t>)>>('bitset_inplace_intersection');
  late final _bitset_inplace_intersection =
      _bitset_inplace_intersectionPtr.asFunction<
          void Function(ffi.Pointer<bitset_t>, ffi.Pointer<bitset_t>)>();

  int bitset_intersection_count(
    ffi.Pointer<bitset_t> b1,
    ffi.Pointer<bitset_t> b2,
  ) {
    return _bitset_intersection_count(
      b1,
      b2,
    );
  }

  late final _bitset_intersection_countPtr = _lookup<
      ffi.NativeFunction<
          ffi.Size Function(ffi.Pointer<bitset_t>,
              ffi.Pointer<bitset_t>)>>('bitset_intersection_count');
  late final _bitset_intersection_count = _bitset_intersection_countPtr
      .asFunction<int Function(ffi.Pointer<bitset_t>, ffi.Pointer<bitset_t>)>();

  bool bitsets_disjoint(
    ffi.Pointer<bitset_t> b1,
    ffi.Pointer<bitset_t> b2,
  ) {
    return _bitsets_disjoint(
      b1,
      b2,
    );
  }

  late final _bitsets_disjointPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<bitset_t>,
              ffi.Pointer<bitset_t>)>>('bitsets_disjoint');
  late final _bitsets_disjoint = _bitsets_disjointPtr.asFunction<
      bool Function(ffi.Pointer<bitset_t>, ffi.Pointer<bitset_t>)>();

  bool bitsets_intersect(
    ffi.Pointer<bitset_t> b1,
    ffi.Pointer<bitset_t> b2,
  ) {
    return _bitsets_intersect(
      b1,
      b2,
    );
  }

  late final _bitsets_intersectPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<bitset_t>,
              ffi.Pointer<bitset_t>)>>('bitsets_intersect');
  late final _bitsets_intersect = _bitsets_intersectPtr.asFunction<
      bool Function(ffi.Pointer<bitset_t>, ffi.Pointer<bitset_t>)>();

  bool bitset_contains_all(
    ffi.Pointer<bitset_t> b1,
    ffi.Pointer<bitset_t> b2,
  ) {
    return _bitset_contains_all(
      b1,
      b2,
    );
  }

  late final _bitset_contains_allPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<bitset_t>,
              ffi.Pointer<bitset_t>)>>('bitset_contains_all');
  late final _bitset_contains_all = _bitset_contains_allPtr.asFunction<
      bool Function(ffi.Pointer<bitset_t>, ffi.Pointer<bitset_t>)>();

  void bitset_inplace_difference(
    ffi.Pointer<bitset_t> b1,
    ffi.Pointer<bitset_t> b2,
  ) {
    return _bitset_inplace_difference(
      b1,
      b2,
    );
  }

  late final _bitset_inplace_differencePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<bitset_t>,
              ffi.Pointer<bitset_t>)>>('bitset_inplace_difference');
  late final _bitset_inplace_difference =
      _bitset_inplace_differencePtr.asFunction<
          void Function(ffi.Pointer<bitset_t>, ffi.Pointer<bitset_t>)>();

  int bitset_difference_count(
    ffi.Pointer<bitset_t> b1,
    ffi.Pointer<bitset_t> b2,
  ) {
    return _bitset_difference_count(
      b1,
      b2,
    );
  }

  late final _bitset_difference_countPtr = _lookup<
      ffi.NativeFunction<
          ffi.Size Function(ffi.Pointer<bitset_t>,
              ffi.Pointer<bitset_t>)>>('bitset_difference_count');
  late final _bitset_difference_count = _bitset_difference_countPtr
      .asFunction<int Function(ffi.Pointer<bitset_t>, ffi.Pointer<bitset_t>)>();
